--- a/IMC/app/src/main/res/layout/activity_main.xml
+++ b/IMC/app/src/main/res/layout/activity_main.xml
@@ -13,22 +13,22 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textNome"
+            android:id="@+id/textPeso"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.03"
-            android:text="Nome:"
+            android:text="Peso:"
             android:textColor="#000000"
             android:textSize="20sp" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName"
+            android:id="@+id/edPeso"
             android:layout_width="83dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Nome" />
+            android:text="" />
 
     </LinearLayout>
 
@@ -38,23 +38,32 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textEmail"
+            android:id="@+id/textAltura"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.045"
-            android:text="Email:"
+            android:text="Altura:"
             android:textColor="#000000"
             android:textSize="20sp" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName2"
+            android:id="@+id/edAltura"
             android:layout_width="77dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Email" />
+            android:text="" />
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="0"
+        android:onClick="calcularIMC"
+        android:text="Calcular IMC" />
 
 </LinearLayout>
